kubernetes/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hsfl-verse-vault
  namespace: hsfl-verse-vault
spec:
  ingressClassName: nginx
  rules:
    - host: vv.fape2866.hsfl.de
      http:
        paths:
          - path: /api/v1/login
            pathType: Exact
            backend:
              service:
                name: user-service
                port:
                  name: http
          - path: /api/v1/register
            pathType: Exact
            backend:
              service:
                name: user-service
                port:
                  name: http
          - path: /api/v1/refresh-token
            pathType: Exact
            backend:
              service:
                name: user-service
                port:
                  name: http
          - path: /api/v1/logout
            pathType: Exact
            backend:
              service:
                name: user-service
                port:
                  name: http
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  name: http
          - path: /api/v1/books
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  name: http
          - path: /api/v1/chapters
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  name: http
          - path: /api/v1/transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  name: http
          - path: /api/v1/reset
            pathType: Exact
            backend:
              service:
                name: test-data-service
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  name: http
